/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-05-20  Gilles Dumortier <dgil at ieee.org>
	* Quote view : display Yahoo intraday graph for LSE markets
	* Be sure LSE ticker is valid (remove '.' at the end) (SF bug 1719653)
	* Quotes View - changing quote keep the current page (SF bug 1632171)
	* Be sure a connector is only once in the property list of connectors
	* Fix an issue with % on live for some connectors
	* Connectors should be global properties of the quote (SF bug 1642791)

2007-05-19  Gilles Dumortier <dgil at ieee.org>
	* Fix a refresh problem when changing the quote in the quote view
	* Fix an issue with market not loaded (SF bug 1721820)
	* column sorting persistence (SF bug 1481717) incl. dynamic sorting
	* able to sort on any column of the matrix

2007-05-18  Gilles Dumortier <dgil at ieee.org>
	* Fill Grid pane with quote historical data
	* get currencies from the network : can't when "-d" option is used !
	* bad display of erase cache dialog box (SF bug 1701785) - implement
	  iTradeDialog() which use sized_controls package
	* Some information on wxaddons missing on some Linux distro

2007-05-17  Gilles Dumortier <dgil at ieee.org>
	* some code to test column sorting

2007-05-15  Gilles Dumortier <dgil at ieee.org>
	* r721 : list of portfolio not sorted (SF bug 1718941)
	* GBX and GBP currencies (SF bug 1712966)
	* LSE market : List of Quotes (SETS, SETSmm and SEAQ) (SF bug 1719078)
	* LSE market : manage Suffix Yahoo ".L" (SF bug 1716177)
	* yahoo import connector : fix a crash when socket 'reset by peer'

2007-05-14  Gilles Dumortier <dgil at ieee.org>
	* -x : experimental code to reduce the refresh time (SF bug 1611122)
	* Symbol List : Huge Database : Load market on Demand (SF bug 1662171)
	* Indices not displayed without Isin code (SF bug 1703434)
