@@ -2,4 +2,4 @@ default;<default portfolio>;18331;EURONEXT;EUR;1.196000;6;15;US0000000001
 crb;CRB bug hunting;FR0010270033;EURONEXT;EUR;1.196000;3;5;FR0003502079
 cac40;Cac40;;EURONEXT;EUR;1.196000;3;5;FR0003500008
 us;;;NASDAQ;USD;1.196000;3;5;US6289081050
-sf1721820;SF bug 1721820;SF1721820;LSE SEAQ;USD;1.196000;3;5;FR0003502079
+sf1721820;SF bug 1721820;SF1721820;MILAN EXCHANGE;USD;1.196000;3;5;IT0003137749
